enable update tags on disk offerings
This PR enables `updateDiskOfferingCmd` to edit storage pool tags for `diskoffering`. Thus, providing greater control to ADMINS decide where disks will be allocated.

Changes on UI to enable the user to edit diskoffering tags